# adaptive-brightness

./: .envrc  .gitignore  README.md  flake.nix  todo.md
prototype/: adaptive.py  requirements.txt  test.py
python/: .envrc  adaptive.py  flake.nix  test.py
rust/: Cargo.toml  build.rs  flake.nix
rust/src/: brightness_curve.rs  config.rs  main.rs  monitor.rs  piecewise_linear.rs  tsl2591.rs
